; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce110/extr_dce110_transform_v.c_dce110_xfmv_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce110/extr_dce110_transform_v.c_dce110_xfmv_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transform = type { i32 }
%struct.dce_transform = type { i32*, i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.transform*)* @dce110_xfmv_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dce110_xfmv_reset(%struct.transform* %0) #0 {
  %2 = alloca %struct.transform*, align 8
  %3 = alloca %struct.dce_transform*, align 8
  store %struct.transform* %0, %struct.transform** %2, align 8
  %4 = load %struct.transform*, %struct.transform** %2, align 8
  %5 = call %struct.dce_transform* @TO_DCE_TRANSFORM(%struct.transform* %4)
  store %struct.dce_transform* %5, %struct.dce_transform** %3, align 8
  %6 = load %struct.dce_transform*, %struct.dce_transform** %3, align 8
  %7 = getelementptr inbounds %struct.dce_transform, %struct.dce_transform* %6, i32 0, i32 3
  store i32* null, i32** %7, align 8
  %8 = load %struct.dce_transform*, %struct.dce_transform** %3, align 8
  %9 = getelementptr inbounds %struct.dce_transform, %struct.dce_transform* %8, i32 0, i32 2
  store i32* null, i32** %9, align 8
  %10 = load %struct.dce_transform*, %struct.dce_transform** %3, align 8
  %11 = getelementptr inbounds %struct.dce_transform, %struct.dce_transform* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.dce_transform*, %struct.dce_transform** %3, align 8
  %13 = getelementptr inbounds %struct.dce_transform, %struct.dce_transform* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  ret void
}

declare dso_local %struct.dce_transform* @TO_DCE_TRANSFORM(%struct.transform*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
